--- a/sampl.html
+++ b/sampl.html
@@ -113,14 +113,13 @@
              <hr>
              
               <td width="22.5%">
-                     <ul>
-                         <li class="w" >SMART INDIA BANK,</li>
-                         <li class="w">smartIndia2020@gmail.com</li>
-                         <li class="w">BTM Lay Out,2nd Stage,</li>
-                         <li class="w">Central Silk Board,</li>
-                         <li class="w">Bengaluru, 560068,</li>
-                         <li class="w">Karnataka, India.</li>
-                     </ul>
+                <ul>
+                    <li class="w">Bank2020@gmail.com</li>
+                    <li class="w">BTM Lay Out,2nd Stage,</li>
+                    <li class="w">Central Silk Board,</li>
+                    <li class="w">Bengaluru, 560068,</li>
+                    <li class="w">Karnataka, India.</li>
+                </ul>
              </td>
              
              <td width="22.5%">
