--- a/sampl.html
+++ b/sampl.html
@@ -35,7 +35,7 @@
             <li  class="active"><a href="Transaction.html" class="anchor">Transaction</a></li>
             <li  class="active"><a href="aboutUs.html" class="anchor">About</a></li>
             <li  class="active"><a href="contactUs.html" class="anchor">Contact Us</a></li>
-            <li  class="active"><a href="Home.html" class="anchor">Log Out</a></li>
+            <li  class="active"><a href="index.html" class="anchor">Log Out</a></li>
         </ul>
 
   </div>
