--- a/Transaction.html
+++ b/Transaction.html
@@ -13,7 +13,7 @@
     <div class="main">
 
             <div class="logo">
-                <img src="l.png" alt="">
+                <a href="sampl.html"><img src="l.png" alt=""></a>
             </div>
 
         
@@ -22,7 +22,7 @@
                 <li  class="active"><a href="Transaction.html" class="anchor">Transaction</a></li>
                 <li  class="active"><a href="aboutUs.html" class="anchor">About</a></li>
                 <li  class="active"><a href="contactUs.html" class="anchor">Contact Us</a></li>
-                <li  class="active"><a href="Home.html" class="anchor">Log Out</a></li>
+                <li  class="active"><a href="index.html" class="anchor">Log Out</a></li>
             </ul>
 
 
