--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,7 +9,7 @@
     <style>
         .c{
             background-color: lightgray;
-            height: 650px;
+            height: 800px;
              width: 100%;
 
         }
@@ -31,7 +31,7 @@
     <div class="main">
 
         <div class="logo">
-            <img src="l.png" alt="">
+            <a href="sampl.html"><img src="l.png" alt=""></a>
         </div>
 
     
@@ -40,7 +40,7 @@
             <li  class="active"><a href="Transaction.html" class="anchor">Transaction</a></li>
             <li  class="active"><a href="aboutUs.html" class="anchor">About</a></li>
             <li  class="active"><a href="contactUs.html" class="anchor">Contact Us</a></li>
-            <li  class="active"><a href="Home.html" class="anchor">Log Out</a></li>
+            <li  class="active"><a href="index.html" class="anchor">Log Out</a></li>
         </ul>
 
 
@@ -66,7 +66,7 @@
         <br>
         <br>
         <br>
-            <img src="axis.PNG" alt="">
+            <img src="about.PNG" alt="" style="width: 100%; height: auto;">
             <br>
             
 
