--- a/contactUs.html
+++ b/contactUs.html
@@ -10,7 +10,7 @@
         .c{
             background-color:lightgrey;
             background-size: cover;
-            height: 1000px;
+            height: 800px;
              width: 100%;
 
         }
@@ -33,7 +33,7 @@
     <div class="main">
 
         <div class="logo">
-            <img src="l.png" alt="">
+            <a href="sampl.html"><img src="l.png" alt=""></a>
         </div>
 
     
@@ -42,7 +42,7 @@
             <li  class="active"><a href="Transaction.html" class="anchor">Transaction</a></li>
             <li  class="active"><a href="aboutUs.html" class="anchor">About</a></li>
             <li  class="active"><a href="contactUs.html" class="anchor">Contact Us</a></li>
-            <li  class="active"><a href="Home.html" class="anchor">Log Out</a></li>
+            <li  class="active"><a href="index.html" class="anchor">Log Out</a></li>
         </ul>
 
   </div>
@@ -61,8 +61,8 @@
     <p style="padding-left: 10px;">   For Ahmedabad / Bangalore / Chennai / Delhi & NCR / Hyderabad / Kolkata / Mumbai / Pune dial 61606161 </p> 
     <p style="padding-left: 10px;">   For Chandigarh / Cochin / Indore / Jaipur / Lucknow dial 6160616</p>
     <br><br>
-        <div style="border: 10px black;">
-            <img src="contactUs.PNG" alt="" style="width: 100%; height: 500px; border: 10px black; padding-left: 10px;">
+        <div style="border: 10px black; width: 100%;">
+            <img src="axis.PNG" alt="" style="width: 100%; height: auto; border: 10px black; ">
         </div>
   </div>
   <!--------------------------------------------------------------- for footer------------------------------------------------------------->
