--- a/sampl.html
+++ b/sampl.html
@@ -66,7 +66,7 @@
             <!-- <br>
                <p style="color: white;">Welcome to World Bank....</p> -->
 
-               <img src="homeworld.PNG" alt="">
+               <img src="homeworld.PNG" alt="" style="width: 100%; height: auto;">
   </div>
 
   
