--- a/sampl.html
+++ b/sampl.html
@@ -11,7 +11,8 @@
         .k{
             height: 1200px;
             width: 100%;
-            background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("m.jpg");
+            /* background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("m.jpg"); */
+           background-color: white;
             background-size: cover;
             color: green;
             font-size: 50px;
@@ -62,9 +63,9 @@
             
               </div>
               
-            <!-- <br> -->
             <!-- <br>
-               <p style="color: white;">Welcome to World Bank....</p> -->
+            <br> -->
+               <!-- <p style="color: white;">Welcome to World Bank....</p>  -->
 
                <img src="homeworld.PNG" alt="" style="width: 100%; height: auto;">
   </div>
